<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">project_traning_2&amp;3</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <!-- http -->
    <string name="base_url"></string>
    <string name="api_url">/</string>
    <!-- create account -->
    <string name="create_account_name">login</string>
    <string name="create_account_email">Adresse mail:</string>
    <string name="create_account_mdp">Mots de passe:</string>
    <string name="create_account_confimMdp">Confirmation:</string>
    <string name="create_account_deff">Creation d\'un compte. </string>
    <string name="create_account_valider">validation</string>
    <!-- conection -->
    <string name="fragment_login_text_username">identifiant :</string>
    <string name="fragment_login_connection">Connection</string>
    <string name="fragment_login_text_passworld">mots de passe :</string>
    <string name="fragment_login_create_acc">create acount</string>
    <!-- listfriend -->
    <string name="fragment_listfriend_menu_addfriend">Add friend</string>
    <string name="fragment_listfriend_menu_delfriend">Delete friend</string>
    <!-- addfriend -->
    <string name="fragment_addfriend_text_namefriend">Friend\'s name</string>
    <string name="fragment_addfriend_button_addfriend">Add friend</string>
    <!-- menuresto -->
    <string name="fragment_menuresto_name">resto name</string>
    <string name="fragment_menuresto_deff">resto deff</string>
    <string name="fragment_menuresto_type">resto type</string>
    <!-- menurestoexpende -->
    <string name="fragment_expenderesto_text_name">resto name</string>
    <string name="fragment_expenderesto_text_deff">resto deff</string>
    <string name="fragment_expenderesto_text_type">resto type</string>
    <string name="fragment_expenderesto_text_meal">resto meal</string>
    <string name="fragment_expenderesto_button_cancel">Cancel</string>
    <string name="fragment_expenderesto_button_metting">Create metting</string>
    <!-- menu -->
    <string name="drawer_open">"Opening drawer navigation"</string>
    <string name="drawer_close">"Closing drawer navigation"</string>
    <string name="about_title">About us</string>
    <string name="about">This appication was devoloped by Guillaume savy and pierre tanghe. Contact us via the web site.</string>
    <string name="findrestaurant">Find restaurant fragment</string>
    <string name="findrestaurant_title">Find restaurant</string>
    <string name="findrestaurantmap">Find restaurant on map fragment</string>
    <string name="findrestaurantmap_title">Find restaurant on map</string>
    <string name="nfc_title">NFC reader</string>
    <string name="order_meal">Order meal fragment</string>
    <string name="order_meal_title">Order meal</string>
    <string name="list_friend">list friend fragment</string>
    <string name="list_friend_title">List of friends</string>
    <string name="web">web fragment</string>
    <string name="web_title">site wep restaurateur</string>
    <string name="list_metting">metting fragment</string>
    <string name="list_metting_title">List metting</string>
    <string name="logoff_title">Logoff</string>
    <string name="setting_title">Setting</string>
    
    <!-- nfc layout -->
    <string name="nfc">For reading </string>
    <string name="text_write_nfc">For writing</string>
    <string name="text_format_nfc">For format</string>
    <string name="button_read_nfc">Read a NFC tag</string>
    <string name="button_write_nfc">write a NFC tag</string>
    <string name="button_format_nfc">Format a NFC tag</string>
    <string name="text_nfc">Aproch the telephone near a NFC tag ad read it </string>
    <string name="error_detected">TAG NOT DETECTED</string>
    <string name="ok_writing">You HAVE WRITTEN YOUR TAG !!</string>
    <string name="error_writing">ERROR DURING WRITING. ARE YOU SURE THAT YOUR TAG IS CLOSE TO YOUR MOBILE PHONE?</string>
    <string name="ok_detection">TAG DETECTED: </string>
    <string name="list_meeting">Meetings</string>
    <string name="menu_meeting_list_add_b">Create a meeting</string>
    <string name="create_meeting_title">Create Meeting</string>
    <string name="menu_add_meeting_validate_bt">ok</string>
     <!-- order layout -->
    <string name="create_orderresto">chose a restaurant</string>
    
</resources>
