<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="5dp" >

        <TextView
            android:id="@+id/seeder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nfc" />

    </LinearLayout>

    <TextView
        android:id="@+id/text_layout_nfc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_nfc"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/button_layout_nfc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:linksClickable="false"
        android:text="@string/button_nfc" />

    <Button
        android:id="@+id/button_layout_nfc_format"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_format_nfc" />

</LinearLayout>